# RainbowBrowserAI

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_ALIGNMENT.md  BRIDGING_DEVELOPMENT_PLAN.md  BROWSER_SETUP.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUIDE.md  DEVELOPMENT_PROGRESS.md  DOCUMENTATION_CLEANUP_ANALYSIS.md  Dockerfile  ENHANCED_LLM_SUMMARY.md  EXECUTION_PLAN.md  FINAL_ACHIEVEMENT_SUMMARY.md  GITIGNORE_OPTIMIZATION_SUMMARY.md  HARDCODED_VALUES_REVIEW.md  IMPLEMENTATION_PLAN.md  INSTALL_EXTENSION.md  INTELLIGENT_EXECUTION_COMPLETE.md  INTELLIGENT_EXECUTION_PLAN.md  MODULAR_ROADMAP.md  MODULE_1_COMPLETION_SUMMARY.md  MODULE_BREAKDOWN.md  MODULE_DEPENDENCY_ANALYSIS.md  MODULE_STATUS.md  POC_ROADMAP.md  PROJECT_ANALYSIS.md  PROJECT_IMPROVEMENTS_SUMMARY.md  PROJECT_STATUS.md  QUICK_FIX.md  README.md  REFACTORING_SUMMARY.md  STANDALONE.md  TROUBLESHOOTING.md  USER_GUIDE.md  build_standalone.bat  docker-compose.yml  simple_browser_test  (+7 more)
poc/: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  ASSESSMENT_REPORT.md  CLAUDE.md  CLEANUP_SUMMARY.md  Cargo.toml  DAY2_COMPLETION_REPORT.md  DAY3_COMPLETION_REPORT.md  DAY4_COMPLETION_REPORT.md  DAY4_PLAN.md  DAY5_PLAN.md  DESIGN_ALIGNMENT_ANALYSIS.md  DEVELOPMENT_PLAN_V8.0.md  DEVELOPMENT_PROGRESS_DAY1.md  DEVELOPMENT_PROGRESS_EVALUATION.md  DEVELOPMENT_STATUS.md  Dockerfile  EXAMPLES.md  FIX_BLACK_SPACE_ISSUE.md  FIX_CHROMEDRIVER.bat  FIX_SUMMARY.md  LIBRARY_COMPARISON.md  MEMORY_TOOLS_IMPLEMENTATION.md  MODULAR_IMPROVEMENT_PLAN.md  ORGANIZATION_SUMMARY.md  PERCEPTION_UI_GUIDE.md  PLUGIN_ARCHITECTURE.md  PLUGIN_DASHBOARD_SUMMARY.md  PRACTICAL_IMPLEMENTATION_PLAN.md  PROJECT_REORGANIZATION_FINAL_SUMMARY.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REFINED_DEVELOPMENT_PLAN.md  REMOVED_SERVICES.md  REORGANIZATION_COMPLETE.md  ROLLBACK_DECISION_ANALYSIS.md  (+46 more)
poc-chromiumoxide/: ACTION_ENGINE_INTEGRATION_SUMMARY.md  AGENTS.md  COORDINATION_ARCHITECTURE.md  COORDINATION_README.md  Cargo.toml  FINAL_STATUS.md  FIX_NO_SESSION_ERROR.md  IMPLEMENTATION_STATUS.md  MIGRATION_GUIDE.md  PERCEPTION_API_STATUS.md  PROJECT_SUMMARY.md  README.md  Start-RainbowBrowser.ps1  TESTING_GUIDE.md  TOOLS_STATUS.md  basic_test.sh  build.rs  cleanup_all.sh  comprehensive_test.sh  fix_api_types.py  fix_map_errors.sh  manual_coordination_test.sh  refactoring_plan.md  remove_redundancies.sh  simple_tools_test.rs  start.py  start.sh  start_improved.sh  start_refactoring.sh  test_intelligent_action.py  test_perception_tool_coordination.py  test_session_perception.sh  test_session_perception_port_3002.bat  test_session_perception_simple.bat
poc-chromiumoxide/docs/: ACTION_ENGINE_INTEGRATION_SUMMARY.md  API_DOCUMENTATION.md  MIGRATION_PLAN.md  PERCEPTION_API_STATUS.md  PERCEPTION_TESTING_GUIDE.md  TESTING_GUIDE.md  TOOLS_IMPLEMENTATION_PLAN.md  TOOL_PARAMETERS_REFERENCE.md
poc-chromiumoxide/examples/: simple_tools_test.rs  test_tool_perception.rs  tools_demo.rs  v2_client_examples.py  v2_client_examples.rs
poc-chromiumoxide/scripts/: basic_test.sh  force_port_3001.sh  kill_ports.ps1  kill_ports.sh  manual_coordination_test.sh  quick_coordination_test.sh  run_comprehensive_tests.sh  smoke_perception_coordination.sh  test_all.sh  test_browser_fix.sh  test_coordination.sh  test_interface_fixes.sh  test_navigate_perceive.sh  test_perception_integration.sh  test_perception_verification.py  test_session_perception.sh  test_tool_fixes.sh  test_tool_perception.sh  test_tool_perception_detailed.py
poc-chromiumoxide/scripts/windows/: start.bat  test_perception_api.bat  test_session_perception.bat
poc-chromiumoxide/src/: lib.rs  main.rs
poc-chromiumoxide/src/action/: action_executor.rs  concurrent_controller.rs  element_locator.rs  mod.rs  retry_mechanism.rs  verification_engine.rs
poc-chromiumoxide/src/api/: coordinated_handlers.rs  intelligence_handlers.rs  llm_handlers.rs  mod.rs  perception_handlers.rs  task_executor.rs  workflow_handlers.rs
poc-chromiumoxide/src/browser/: core.rs  mod.rs  navigation.rs  pool.rs  session.rs
poc-chromiumoxide/src/coordination/: browser_context.rs  cache.rs  coordinator.rs  error_handler.rs  events.rs  intelligence_impl.rs  mod.rs  monitoring.rs  session.rs  (+3 more)
poc-chromiumoxide/static/: app.js  index.html  styles.css
poc-chromiumoxide/tests/: coordination_integration_test.rs  integration_test.rs  run_all_tests.sh  test_config.yaml  tools_integration_test.rs
poc/archive/: standalone_perception.rs
poc/benches/: performance.rs  performance_benchmark.rs
poc/docs/: PERCEPTION_MODULE_PLAN.md  browser-use-command-system.md
poc/examples/: extract_data_demo.json  extract_table_demo.html  sample_workflow.json  smart_form_demo.html  test_memory_tools.rs  test_tools_compilation.rs  tools_demo.rs
poc/mini_test/: Cargo.toml
poc/scripts/: run_benchmarks.sh  setup_env.sh  test_api.sh  test_basic.sh  test_dashboard.sh  test_plugin_api.sh  test_plugin_dashboard.sh
poc/src/: action_mapper.rs  adaptive_learning.rs  adaptive_pipeline.rs  advanced_analytics.rs  advanced_learning.rs  api.rs  api_client.rs  api_v2.rs  browser.rs  browser_pool.rs  cache.rs  command_registry.rs  config.rs  config_manager.rs  context.rs  contextual_awareness.rs  contextual_perception.rs  continuous_improvement_pipeline.rs  cost_tracker.rs  creative_engine.rs  deployment_pipeline.rs  enhanced_browser.rs  enhanced_command_parser.rs  enhanced_executor.rs  error_recovery.rs  execution_engine.rs  extractor.rs  final_integration.rs  health_monitor.rs  intent_translator.rs  lib.rs  llm_integration.rs  llm_service.rs  main.rs  main_original.rs  metrics.rs  ml_confidence_scorer.rs  mock_llm_provider.rs  monitoring_alerts.rs  multi_model_orchestration.rs  (+18 more)
poc/static/: app.js  index.html  performance_dashboard.html  production-dashboard.js  production-styles.css  production.html  styles.css
poc/tests/: integration_test.rs  integration_tests.rs  real_browser_test.rs  tool_navigate_comprehensive.rs
shared/: Cargo.toml
shared/src/: lib.rs  services.rs  traits.rs  utils.rs
shared/tests/: integration_test.rs
(+363 files in other folders)
