[package]
name = "rainbow-poc-chromiumoxide"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Browser automation with chromiumoxide
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
chromiumoxide_cdp = "0.5"

# Web server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# CLI and configuration
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
url = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
lazy_static = "1.4"
regex = "1.10"
urlencoding = "2.1"
tokio-stream = "0.1"
async-stream = "0.3"

# Image processing
image = "0.24"
base64 = "0.21"

# Memory and caching
bincode = "1.3"
lru = "0.12"

# Perception module dependencies (using existing dependencies above)

# LLM integration dependencies (reusing existing reqwest, serde, chrono, uuid, tokio)
# Additional LLM-specific dependencies would be added here if needed

# System information
sys-info = "0.9"
sysinfo = "0.29"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bin]]
name = "rainbow-poc-chromiumoxide"
path = "src/main.rs"