[package]
name = "rainbow-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
thirtyfour = "0.32"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
lazy_static = "1.4"
sys-info = "0.9"
uuid = { version = "1.6", features = ["v4", "serde"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
urlencoding = "2.1"
tokio-stream = "0.1"
async-stream = "0.3"
async-trait = "0.1"
toml = "0.8"
sysinfo = "0.29"
dotenv = "0.15"
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "performance"
harness = false

# Test binaries moved to tests/manual/
# Run manual tests with: cargo run --bin rainbow-poc
