[package]
name = "rainbow-shared"
version = "0.1.0"
edition = "2021"
description = "Shared services and traits for RainbowBrowserAI"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Web automation
thirtyfour = "0.32"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
regex = "1.0"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"